# finance-sim

./: LICENSE  README.md  pyproject.toml  scripts.py
examples/: finance-config.yaml
src/: __init__.py  main.py
src/finance_sim/: __init__.py  config.py  events.py  main.py  reporting.py  scheduling.py  util.py
test/: amortizing-loan.py  config.py  constant-expense.py  constant-growth-asset.py  constant-salaried-income.py  taxes.py
