[tool.poetry]
name = "finance-sim"
version = "0.1.0"
description = "contains functions that facilitate simulations of simple, potentially naive finance models related to personal investing"
authors = ["Tyler Adams"]
license = "Apache-2.0"
readme = "README.md"
packages = [{ include = "finance_sim", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
pytest = "^7.4.2"
python-dateutil = "^2.8.2"
pyyaml = "^6.0.1"
pandas = "^2.1.2"
numpy = "^1.26.2"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"

[tool.poetry.scripts]
test = "scripts:runTests"

[tool.black]
line-length = 92


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
